Explore page: Fix the hidden song list overflow

--- a/public/stylesheets/explore/style.sass
+++ b/public/stylesheets/explore/style.sass
@@ -65,7 +65,7 @@ html, body
         top: 0%
         left: 100%
         background-color: $bg_grey
-        width: 50%
+        width: 225px
         transform: rotate(90deg)
         transform-origin: 0 0
         z-index: -1
